package dk.cphbusiness.dat.carporteksamensproject.model.dtos;

import dk.cphbusiness.dat.carporteksamensproject.model.entities.Account;

public record AccountDTO(Account account, PersonDTO personDTO) { }
