package dk.cphbusiness.dat.carporteksamensproject.model.dtos;

import dk.cphbusiness.dat.carporteksamensproject.model.annotations.Join;
import dk.cphbusiness.dat.carporteksamensproject.model.annotations.JoinedEntities;
import dk.cphbusiness.dat.carporteksamensproject.model.annotations.Table;
import dk.cphbusiness.dat.carporteksamensproject.model.entities.Person;

@JoinedEntities
@Table("Person")
@Join(tables = {"Address","City"}, joins = {"address_ID","city_zipcode"})
public record PersonDTO(Person person, AddressDTO address) {
}
