package dk.cphbusiness.dat.carporteksamensproject.model.entities;

public enum AmountUnit {
    PIECE,
    PACK,
    SET,
    ROLL
}
