package dk.cphbusiness.dat.carporteksamensproject.model.entities;

public enum InquiryStatus {
    OPEN,
    REVIEW,
    CANCELED,
    ORDERED
}
