package dk.cphbusiness.dat.carporteksamensproject.model.entities;

public enum Role {
    COSTUMER,
    EMPLOYEE,
    ADMIN
}
