package dk.cphbusiness.dat.carporteksamensproject.model.entities;

public enum Unit {
    METER,
    PIECE
}
